force-app/main/default/objects/Contact/fields/Allergy_Nuts__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Nuts__c</fullName>
    <label>Allergy Nuts</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>