force-app/main/default/objects/Contact/fields/Allergy_Shellfish__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Shellfish__c</fullName>
    <label>Allergy Shellfish</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>