force-app/main/default/objects/Contact/fields/Comm_Style__c.field-meta.xml
<CustomField>
    <fullName>Comm_Style__c</fullName>
    <label>Communication Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brief/Efficiency</fullName>
                <default>true</default>
                <label>Brief/Efficiency</label>
            </value>
            <value>
                <fullName>Leisurely/Concierge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>