force-app/main/default/objects/Contact/fields/Lifetime_No_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_No_Show_Count__c</fullName>
    <label>Lifetime No Show Count</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>