force-app/main/default/objects/Contact/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <label>Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
                <default>true</default>
                <label>Silver</label>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>