force-app/main/default/objects/Contact/fields/Passcode__c.field-meta.xml
<CustomField>
    <fullName>Passcode__c</fullName>
    <description>Verification passcode for escalation auth gate. Format: first 3 letters of FirstName + 123456 (e.g., Sof123456). User must provide it to connect with human agents.</description>
    <label>Passcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>