force-app/main/default/objects/Contact/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <label>Sentiment Score</label>
    <defaultValue>0</defaultValue>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>