force-app/main/default/objects/Contact/fields/Trust_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Trust_Tolerance__c</fullName>
    <label>Trust Tolerance</label>
    <defaultValue>3</defaultValue>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>